--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -667,6 +667,9 @@
                                 <rect key="frame" x="172" y="602" width="31" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="修改"/>
+                                <connections>
+                                    <action selector="updateButton:" destination="VnX-6q-5ry" eventType="touchUpInside" id="o17-Ic-s4b"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A7F-7H-SbL">
                                 <rect key="frame" x="67" y="64" width="240" height="248"/>
