--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -683,7 +683,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="修改"/>
                                 <connections>
-                                    <action selector="updateButton:" destination="VnX-6q-5ry" eventType="touchUpInside" id="o17-Ic-s4b"/>
+                                    <action selector="toUpdateButton:" destination="VnX-6q-5ry" eventType="touchUpInside" id="8Lj-zC-Nqd"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A7F-7H-SbL">
@@ -712,7 +712,7 @@
         <!--Update For Clothes View Controller-->
         <scene sceneID="nP6-dM-zwK">
             <objects>
-                <viewController id="2FL-dk-m2t" customClass="UpdateForClothesViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UpdateForClothesViewController" id="2FL-dk-m2t" customClass="UpdateForClothesViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tJi-TY-NrR">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -738,6 +738,10 @@
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xIU-ZV-lYL">
                                 <rect key="frame" x="0.0" y="482" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="2FL-dk-m2t" id="OqG-J5-84m"/>
+                                    <outlet property="delegate" destination="2FL-dk-m2t" id="R3W-fH-w6O"/>
+                                </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilK-L3-0D6">
                                 <rect key="frame" x="166" y="340" width="35" height="21"/>
