--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -647,7 +647,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="品項" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Dm-Ga-SoW">
-                                <rect key="frame" x="95" y="554" width="179" height="21"/>
+                                <rect key="frame" x="95" y="592" width="179" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -678,38 +678,45 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w9L-OR-MkV">
-                                <rect key="frame" x="172" y="602" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="修改"/>
-                                <connections>
-                                    <action selector="toUpdateButton:" destination="VnX-6q-5ry" eventType="touchUpInside" id="8Lj-zC-Nqd"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A7F-7H-SbL">
                                 <rect key="frame" x="67" y="64" width="240" height="248"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="購買地點" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AQZ-l4-Hmu">
+                                <rect key="frame" x="95" y="548" width="179" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="c66-46-hDY"/>
                     </view>
                     <navigationItem key="navigationItem" id="mUa-03-c91">
-                        <barButtonItem key="rightBarButtonItem" title="Like" id="xcI-vF-F3i"/>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Like" id="xcI-vF-F3i"/>
+                            <barButtonItem title="修改" id="qE3-r8-mYX">
+                                <connections>
+                                    <action selector="updateButton:" destination="VnX-6q-5ry" id="a2R-Xe-Trf"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="brandLabel" destination="FbB-yr-i6c" id="3vG-Gs-j0c"/>
                         <outlet property="clothesViewImage" destination="A7F-7H-SbL" id="Csq-NX-WCj"/>
                         <outlet property="dateLabel" destination="n4Z-yM-h4z" id="chG-V8-DLJ"/>
                         <outlet property="prieceLabel" destination="TEz-bc-8eU" id="xuy-Dv-HaA"/>
+                        <outlet property="shopLocateLabel" destination="AQZ-l4-Hmu" id="e6Z-Ch-TtC"/>
                         <outlet property="typeLabel" destination="4Dm-Ga-SoW" id="cYo-J6-fN0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hDO-CB-Api" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2113" y="-1100"/>
+            <point key="canvasLocation" x="2112.8000000000002" y="-1101.4992503748126"/>
         </scene>
-        <!--Update For Clothes View Controller-->
+        <!--Title-->
         <scene sceneID="nP6-dM-zwK">
             <objects>
                 <viewController storyboardIdentifier="UpdateForClothesViewController" id="2FL-dk-m2t" customClass="UpdateForClothesViewController" customModule="Ropa" customModuleProvider="target" sceneMemberID="viewController">
@@ -718,25 +725,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="brand" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dqo-Zv-hqb">
-                                <rect key="frame" x="101" y="389" width="179" height="30"/>
+                                <rect key="frame" x="101" y="374" width="179" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ysu-mb-Zwf">
-                                <rect key="frame" x="101" y="440" width="179" height="30"/>
+                                <rect key="frame" x="101" y="417" width="179" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yiZ-gM-zBR">
-                                <rect key="frame" x="67" y="72" width="240" height="236"/>
+                                <rect key="frame" x="67" y="57" width="240" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xIU-ZV-lYL">
-                                <rect key="frame" x="0.0" y="482" width="375" height="162"/>
+                                <rect key="frame" x="0.0" y="494" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <outlet property="dataSource" destination="2FL-dk-m2t" id="OqG-J5-84m"/>
@@ -750,21 +757,46 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amU-Go-o3W">
+                                <rect key="frame" x="164" y="302" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="selectImgButton:" destination="2FL-dk-m2t" eventType="touchUpInside" id="qOO-ag-LLl"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="shopLocate" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FGr-pe-eX6">
+                                <rect key="frame" x="101" y="455" width="179" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="KCR-RS-brr"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Title" id="mbZ-z4-4dV">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="7aX-PE-Mqg">
+                            <connections>
+                                <action selector="saveButton:" destination="2FL-dk-m2t" id="MId-nd-4Ok"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="brandTextField" destination="dqo-Zv-hqb" id="HCR-J5-8bc"/>
                         <outlet property="clothesImageView" destination="yiZ-gM-zBR" id="5Rh-W0-VLj"/>
                         <outlet property="dateLabel" destination="ilK-L3-0D6" id="Z7Z-mk-0HJ"/>
                         <outlet property="itemPickerView" destination="xIU-ZV-lYL" id="JvD-9a-Q6s"/>
                         <outlet property="priceTextField" destination="ysu-mb-Zwf" id="e5o-bH-BQI"/>
+                        <outlet property="shopLocateTextField" destination="FGr-pe-eX6" id="63n-rK-3Qr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JfO-yW-D8a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2940" y="-1101.4992503748126"/>
+            <point key="canvasLocation" x="3525.5999999999999" y="-1101.4992503748126"/>
         </scene>
         <!--First Screen View Controller-->
         <scene sceneID="tux-xP-egg">
@@ -1237,6 +1269,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJa-xa-Xuc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-63" y="581"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="30V-9k-X1J">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1fA-L1-Z8K" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Dvu-Po-xGg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VnX-6q-5ry" kind="relationship" relationship="rootViewController" id="Csq-tJ-GYh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="92V-rI-Ijy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1305" y="-1101"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="haj-NM-B0d">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uUR-ra-LR5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rke-Bu-blV">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2FL-dk-m2t" kind="relationship" relationship="rootViewController" id="UbJ-g3-Wj7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dvk-kc-exV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2818" y="-1101"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
